bugfix media query

--- a/src/index.jade
+++ b/src/index.jade
@@ -15,3 +15,38 @@ html(lang="ru")
     //- footer: include templates/footer
     script(src='js/vendors/jquery.js')
     script(src='js/script.js')
+
+
+//-    //- <!--[if lt IE 9]>
+    script(type="text/javascript").
+      if (!Array.prototype.filter)
+      {
+        Array.prototype.filter = function(fun /*, thisp*/)
+        {
+          var len = this.length;
+          if (typeof fun != "function")
+            throw new TypeError();
+          var res = new Array();
+          var thisp = arguments[1];
+          for (var i = 0; i < len; i++)
+          {
+            if (i in this)
+            {
+              var val = this[i]; // in case fun mutates this
+              if (fun.call(thisp, val, i, this))
+                res.push(val);
+            }
+          }
+          return res;
+        };
+      }
+    //- script(src='js/vendors/tokenizer.js')
+    //- script(src='js/vendors/parser.js')
+    //- script(src='js/vendors/vminpoly.js')
+    <script src="http://saabi.github.io/vminpoly/tokenizer.js"></script>
+    <script src="http://saabi.github.io/vminpoly/parser.js"></script>
+    <script src="http://saabi.github.io/vminpoly/vminpoly.js"></script>
+    //- script(src='js/vendors/respond.min.js')
+    script(src='js/vendors/rem.min.js')
+
+    //- <![endif]-->
