--- a/src/scss/components/_base.scss
+++ b/src/scss/components/_base.scss
@@ -16,9 +16,9 @@ html {
   font-size: 2vw;
 }
 
-/* ===== == = === 30em (480px) === = == ===== */
+/* ===== == = === 48em === = == ===== */
 
-@media only screen and (max-width : 30em) {
+@media only screen and (max-width : 48em) {
   html {
     font-size: 7vw;
   }
