--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -88,8 +88,8 @@ button.print:hover {
   background-color: $color-primary-tint-50;
 }
 
-/* ===== == = === 30em (480px) === = == ===== */
+/* ===== == = === 48em === = == ===== */
 
-@media only screen and (max-width : 30em) {
+@media only screen and (max-width : 48em) {
   button.print { display: none }
 }
