--- a/src/templates/content/details.jade
+++ b/src/templates/content/details.jade
@@ -26,16 +26,16 @@
 #skills
   .label(data-skill='strong')
     span PHP
-    .buttons: button(name='cancel')
+    .buttons: button(name='delete')
   .label(data-skill='strong')
     span Ruby
-    .buttons: button(name='cancel')
+    .buttons: button(name='delete')
   .label(data-skill='medium')
     span Javascript
-    .buttons: button(name='cancel')
+    .buttons: button(name='delete')
   .label(data-skill='weak')
     span Actionscript
-    .buttons: button(name='cancel')
+    .buttons: button(name='delete')
 
 .container-input#skill
   input(type='text' name='skill' placeholder=skill)
